Improve editing capabilities
